--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rede Social</title>
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/Login.css">
 </head>
 <body>
+    <header>
+        <div class="logo"><img src="./src/assets/TechPosters.png" alt=""></div>
+        <div class="container-right">
+            <a class="header-active" href="">Login</a>
+            <a href="./src/pages/cadastro.html">Registro</a>
+        </div>
+    </header>
+    <main>
+        <div class="login-container">
+            <h2>Login</h2>
+            <form class="login-form" action="">
+                <input type="email" placeholder="Seu Email" required class="email-input-login">
+                <input type="password" placeholder="Sua senha" required class="senha-input-login">
+                <button type="button" class="login-btn">Logar</button>
+            </form>
+            <h3>Ainda não possui cadastro?</h3>
+            <div class="btn-container">
+                <a href="./src/pages/cadastro.html" class="cadastrar-btn">Ir para a página de registro</a class="cadastrar-btn">
+            </div>
+        </div>
+    </main>
+    <div class="modal-wrapper ativador" id="modal-login">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 class="modal-title">Email ou Senha inválidos</h3>
+                <button class="modal-close">X</button>
+            </div>
+            <div class="modal-body">
+                Verifique as informações e tente novamente.
+            </div>
+        </div>
+    </div>
     
+    <script src="./src/scripts/Login.js" type="module"></script>
 </body>
 </html>
