--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -14,15 +14,15 @@
     <header>
         <div class="logo"><img src="../assets/TechPosters.png" alt=""></div>
         <div class="container-right">
-            <a href="">Login</a>
-            <a class="header-active" href="">Cadastro</a>
+            <a href="/index.html">Login</a>
+            <a class="header-active" href="../pages/cadastro.html">Cadastro</a>
         </div>
     </header>
     <main>
         <div class="cadastro-container">
             <div class="cadastro-header">
                 <h2>Cadastro</h2>
-                <a href="">Voltar</a>
+                <a href="/index.html">Voltar</a>
             </div>
             <form class="cadastro-form" action="">
                 <input type="text" placeholder="Seu nome" required class="Cadastro-nome">
@@ -34,7 +34,7 @@
             </form>
             <h3>Já possui login?</h3>
             <div class="btn-container">
-                <button>Ir para a página de login</button>
+                <a href="/index.html">Ir para a página de login</a>
             </div>
         </div>
      
