--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -40,7 +40,7 @@
      
     </main>
 
-    <script src="../scripts/cadastro.js" type="module"></script>
+    <script src="../scripts/Cadastro.js" type="module"></script>
 </body>
 
 </html>
